fix: (22.05.20) Fixed statuses with repost caused notifications page to have horizontal scrollbars on mobile devices

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -586,6 +586,15 @@ p
     font-size: 15px
     line-height: 23px
     color: #1C1C1C
+.status-list-body-container-no-padding-left
+  padding-top: 0px !important
+  p
+    font-family: Museo Sans Cyrl
+    font-style: normal
+    font-weight: 300
+    font-size: 15px
+    line-height: 23px
+    color: #1C1C1C
 .status-list-bottom-container
   padding-left: 65px !important
   padding-bottom: 15px !important
